# extra-cmake-modules

./: CMakeLists.txt
find-modules/: FindPythonModuleGeneration.cmake  Qt5Ruleset.py  builtin_rules.py  rules_engine.py  run-sip.py  sip_generator.py
find-modules/module_generation/: CMakeLists.txt  FindClang.cmake  FindLibClang.cmake  FindSIP.cmake  HOWTO  HOWTO.WRITE_RULES  PyQt_template_typecode.py  PyQt_templates.py  README  builtin_rules.py  clangcparser.py  clangcplus.py  clangparser.py  module_compiler.py  module_generator.py  parser.py  rule_helpers.py  rules_engine.py  sip_generator.py  utils.py
find-modules/module_generation/PyKF5/: Akonadi.py  Attica.py  Baloo.py  BluezQt.py  CMakeLists.txt  CalendarSupport.py  FindPyQt.cmake  FollowupReminder.py  IncidenceEditor.py  KActivitiesStats.py  KAlarmCal.py  KArchive.py  KAuth.py  KBlog.py  KBookmarks.py  KCMUtils.py  KCalCore.py  KCalUtils.py  KCodecs.py  KCompletion.py  KConfigCore.py  KConfigGui.py  KConfigWidgets.py  KContacts.py  KCoreAddons.py  KDEWebKit.py  KDGantt2.py  KDeclarative.py  KEmoticons.py  KExiv2.py  KF5KDEGames.py  KFace.py  KGAPI.py  KGeoMap.py  KGlobalAccel.py  KHtml.py  KI18n.py  KIMAP.py  KIO.py  KIOCore.py  (+60 more)
find-modules/module_generation/PyKF5_rules/: Akonadi.py  KBookmarks.py  KCalCore.py  KCompletion.py  KConfigCore.py  KConfigGui.py  KConfigWidgets.py  KContacts.py  KCoreAddons.py  KCrash.py  KF5KDEGames.py  KI18n.py  KIOCore.py  KItemViews.py  KJobWidgets.py  KLDAP.py  KMime.py  KNotifications.py  KNotifyConfig.py  KParts.py  KService.py  KWidgetsAddons.py  KXmlGui.py  MessageCore.py  Syndication.py  __init__.py  common_methodcode.py  common_modulecode.py  common_typecode.py  kio.py
find-modules/module_generation/templates/: PyQt.py  expander.py  mappedtype.py  methodcode.py  std_n_boost.py
find-modules/module_generation/tests/: test_00_generate_and_compile.py  test_clang.py
find-modules/module_generation/tests/Rules/: CMakeLists.txt  FindPyQt.cmake  __init__.py
find-modules/module_generation/tests/sources/: clang_torture.h  sample1.h
find-modules/module_generation/tests/sources/CppLib/: cpplib.cpp  cpplib.h  subdir
find-modules/module_generation/tests/sources/ExternalLib/: external_lib.cpp  external_lib.h
find-modules/sip_generation/: HOWTO  PyKF5_KGuiAddons.py  PyKF5_KJobWidgets.py  PyKF5_KWidgetsAddons.py  PyKF5_methodcode.py  PyKF5_modulecode.py  PyKF5_rules.py  PyKF5_typecode.py  PyQt_template_typecode.py  rules_engine.py  sip_bulk_generator.py  sip_compiler.py  sip_generator.py
find-modules/sip_generation/PyKF5_rules/: KBookmarks.py  KCodecs.py  KCompletion.py  KConfig.py  KConfigGui.py  KConfigWidgets.py  KCoreAddons.py  KF5KDEGames.py  KI18n.py  KIOCore.py  KJobWidgets.py  KLDAP.py  KService.py  KWidgetsAddons.py  KXmlGui.py  PyQt_template_typecode.py  Syndication.py  common_methodcode.py  common_typecode.py
tests/: CMakeLists.txt
tests/GenerateSipBindings/: CMakeLists.txt  cpplib.cpp  cpplib.h  external_lib.cpp  external_lib.h  rules_PyKF5.py  rules_SipTest.py  testscript.py
